# tlv2app

./: .gitignore  Cargo.toml
frontend/: Cargo.toml  index.html
frontend/public/: glue.js  main.css  prism.css
frontend/public/prism/: rust.js
frontend/src/: main.rs
frontend/src/components/: base_table.rs  calculator.rs  comparison_header.rs  comparison_table.rs  header.rs  mod.rs  realtime.rs  selector.rs  sidebar.rs  stacker.rs  value_cell.rs
frontend/src/context/: core.rs
frontend/src/externcalls/: invokers.rs  mod.rs
frontend/src/hooks/: mod.rs  mouseout_click.rs
frontend/src/macros/: stats.rs
frontend/src/model/: calculator.rs  example.rs  mod.rs  realtime.rs  server.rs  traits.rs
frontend/src/pages/: about.rs  calculator.rs  dashboard.rs  github.rs  mod.rs  realtime.rs
frontend/src/tauriapp/: invokers.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs
src-tauri/src/database/: db.rs
src-tauri/src/model/: calculator.rs
src-tauri/src/wnd_system/: keyboard.rs
