[package]
name = "frontend"
version = "0.1.0"
edition = "2024"

[dependencies]
console_error_panic_hook = "0.1.7"
js-sys = "0.3.77"
wasm-bindgen = "0.2.100"
wasm-bindgen-futures = "0.4.50"
web-sys = { version = "0.3.77", features = [
    "Window",
    "Document",
    "HtmlElement",
    "Text",
    "Navigator",
    "Clipboard",
] }
reqwest = { version = "0.12.15", features = ["json", "rustls-tls"] }
yew = { version = "0.21.0", features = ["csr"] }
serde_json = "1.0.140"
serde = { version = "1.0", features = ["derive"] }
gloo = { version = "0.11", features = ["timers"] }
uuid = { version = "1.16.0", features = ["v4", "js"] }
