[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.2.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.5.0", features = [] }
tauri-plugin-log = "2.0.0-rc"
reqwest = { version = "0.12.15", features = ["json", "rustls-tls"] }
rand = "0.9.1"
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio-native-tls"] }
dotenvy = "0.15.7"
uuid = { version = "1.16.0", features = ["v4"] }
