[package]
name = "tutorlolv2"
version = "0.1.0"
description = "TutorLoLv2 windows application"
authors = ["Luiz Gustavo Santana Dias Gomes"]
license = "*"
repository = "https://github.com/LuizGomes56/tlv2app"
edition = "2021"
rust-version = "1.87"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.2.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.5.1", features = ["tray-icon"] }
tauri-plugin-log = "2.0.0-rc"
reqwest = { version = "0.12.19", features = ["json", "rustls-tls"] }

raw-window-handle = "0.6"
windows = { version = "0.61", features = [
    "Win32_UI_WindowsAndMessaging",
    "Win32_Foundation",
] }
tauri-plugin-notification = "2"
